Kubes2/apigateway.yml
---
apiVersion: v1
kind: Service
metadata:
   name: apigateway
spec:
   ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30000
   selector:
      app: apigateway
   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: apigateway
   labels:
      app: apigateway
spec:
   replicas: 1
   selector:
      matchLabels:
         app: apigateway
   template:
      metadata:
         labels:
            app: apigateway
      spec:
         containers:
            - name: apigateway-kubernetes
            # replace <image-tag> with your actual image
              image: maxprimex123/squirtlesquad_apigateway:latest
              ports:
                - containerPort: 8080
