Kubes2/inference.yml
---
apiVersion: v1
kind: Service
metadata:
   name: inference
spec:
   ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
   selector:
      app: inference
   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: inference
   labels:
      app: inference
spec:
   replicas: 1
   selector:
      matchLabels:
         app: inference
   template:
      metadata:
         labels:
            app: inference
      spec:
         containers:
            - name: inference-kubernetes
            # replace <image-tag> with your actual image
              image: maxprimex123/squirtlesquad_inference:latest
              ports:
                - containerPort: 8085
