Kubes2/message.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
  selector:
    app: kafka
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
  - name: zookeeper
    port: 2181
    targetPort: 2181

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka
        ports:
        - containerPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper
        ports:
        - containerPort: 2181
