Kubes2/sessionmanagement.yml
---
apiVersion: v1
kind: Service
metadata:
   name: sessionmanagement
spec:
   ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
      nodePort: 32000
   selector:
      app: sessionmanagement
   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: sessionmanagement
   labels:
      app: sessionmanagement
spec:
   replicas: 1
   selector:
      matchLabels:
         app: sessionmanagement
   template:
      metadata:
         labels:
            app: sessionmanagement
      spec:
         containers:
            - name: sessionmanagement-kubernetes
              image: maxprimex123/squirtlesquad_sessionmanagement:latest
              ports:
                - containerPort: 8082
