Kubes2/usermanagement.yml
---
apiVersion: v1
kind: Service
metadata:
   name: usermanagement
spec:
   ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 31500
   selector:
      app: usermanagement
   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: usermanagement
   labels:
      app: usermanagement
spec:
   replicas: 1
   selector:
      matchLabels:
         app: usermanagement
   template:
      metadata:
         labels:
            app: usermanagement
      spec:
         containers:
            - name: usermanagement-kubernetes
              image: maxprimex123/squirtlesquad_usermanagement:latest
              ports:
                - containerPort: 8081
